# DynCalc

./: .gitignore  DynCalc.sln  README.md  start.sh  workspace.code-workspace
DynCalc.Core/: ActorTypes.fs  DynCalc.Core.fsproj  GlobalActor.fs  Library.fs  ProgramActor.fs  ProviderActor.fs  SinkActor.fs  playground.fsx
DynCalc.Core/Providers/: HttpProvider.fs  ProviderTypes.fs  StockPriceProvider.fs  WebSocketProvider.fs
DynCalc.Core/Runtime/: Evaluator.fs  Graph.fs  playground.fsx
DynCalc.Core/Sinks/: HttpSink.fs  LogSink.fs  SinkTypes.fs
DynCalc.Lang/: Ast.fs  DynCalc.Lang.fsproj  FpSys.fs  MultilineParser.fs  Parser.fs  playground.fsx
DynCalc.Lang/DeriveParsers/: Derive.fs  JsonPath.fs  playground.fsx
DynCalc.Tests/: DynCalc.Tests.fsproj  FP.fs  ParserTests.fs  Tests.fs
DynCalc.Web/: ActorServices.fs  DynCalc.Web.fsproj  HttpHandlers.fs  Models.fs  Program.fs  web.config
DynCalc.Web/www/: index.html
DynCalc.Web/www/css/: style.css
DynCalc.Web/www/js/: codemirror.min.js
ws_counter/: Cargo.toml
ws_counter/src/: main.rs
