[package]
name = "ws_counter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.15"
tokio = { version = "1.11", features = ["sync", "net", "rt-multi-thread", "time", "macros"]}
futures-util = "0.3.17"
log = "0.4.14"
env_logger = "0.9.0"
